--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,10 +9,12 @@ parameters:
 
 services:
     # default configuration for services in *this* file
+    App\EventSubscriber\EasyAdminSubscriber:
+        tags:
+            - { name: 'kernel.event_subscriber' }
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
